--- a/day4/Style3.css
+++ b/day4/Style3.css
@@ -1,4 +1,4 @@
-*{padding: 0;margin: 0;}
+*{padding: 0;margin: 0; box-sizing:border-box ;}
 html {
     scroll-behavior: smooth;
     scroll-padding: 90px;
@@ -21,7 +21,7 @@ html {
     justify-content: space-between;
 }
 .menu ul li{
-    width: 250px;
+    width: 200px;
     margin: 10px;
     padding: 10px;
 }
@@ -140,6 +140,11 @@ a{
     text-align: center;
     margin-bottom: 10px;
     display: flex;
+}
+.ccc
+{
+    width: 99%;
+    margin: auto;
 }
 .template a{
     color: black;
@@ -266,6 +271,10 @@ a{
     text-align: center;
     margin-left: 20px;
     margin-right: -20px;
+  }
+  .ccc{
+    padding: 0;margin: 0; box-sizing:border-box ;
+    width: 100%;
   }
 
 
