--- a/day4/Style3.css
+++ b/day4/Style3.css
@@ -3,6 +3,9 @@ html {
     scroll-behavior: smooth;
     scroll-padding: 10px;
 }
+.container{
+    width: 1400px;
+}
 .menu{
     background:rgb(50, 50, 50);
     text-align: center;
@@ -25,7 +28,7 @@ html {
     margin: 10px;
     padding: 10px;
 }
-}
+
 .menu ul li a{
     text-decoration: none;
     text-transform: uppercase;
@@ -39,12 +42,12 @@ html {
     color: black;
 }
 .image img{
-    width: 97.5%;
+    width: 105.8%;
     height:800px;
-    margin-left: 45px;
-    margin-top: 5%;
+    margin-left: 20px;
+    margin-top: 6%;
     position: relative;
-    margin-right: 70px;
+   
 }
 .Team{
     text-align: center;
@@ -81,7 +84,7 @@ html {
     height: auto;
 }
 .proj1{
-    width: 100%;
+    width: 110%;
     height:800px;
     margin-left: 10px;   
 }
