--- a/day11/style.css
+++ b/day11/style.css
@@ -108,3 +108,10 @@ body {
     top: 83%;
     left: 68%;
   }
+  #hh{
+    margin: 0;
+    height: 100vh;
+  cursor: url("../image/hammer.svg"),auto;
+
+  }
+
