--- a/day11/style.css
+++ b/day11/style.css
@@ -111,7 +111,7 @@ body {
   #hh{
     margin: 0;
     height: 100vh;
-  cursor: url("../image/hammer.svg"),auto;
+  cursor: url("../image/icons8-work-boot-40.png"),auto;
 
   }
 
